add tests for manager and util packages